Module oracle: add " #2

--- a/templates/standard.rsp.erb
+++ b/templates/standard.rsp.erb
@@ -381,7 +381,7 @@ INSTALL_TYPE="SE"
 # Description: The OS group to be granted OSDBA privileges
 # Example    : s_nameForDBAGrp = "dba"
 #------------------------------------------------------------------------------
-s_nameForDBAGrp=dba
+s_nameForDBAGrp="dba"
 
 #------------------------------------------------------------------------------
 # Name       : s_nameForOPERGrp
@@ -389,7 +389,7 @@ s_nameForDBAGrp=dba
 # Description: The OS group to be granted OSOPER privileges
 # Example    : s_nameForDBAGrp = "oper"
 #------------------------------------------------------------------------------
-s_nameForOPERGrp=wheel
+s_nameForOPERGrp="wheel"
 
 
 ###############################################################################
