use the right oracle version

--- a/templates/standard.rsp.erb
+++ b/templates/standard.rsp.erb
@@ -6,7 +6,7 @@ INVENTORY_LOCATION=/etc/oraInv
 SELECTED_LANGUAGES=en
 ORACLE_HOME=<%= oracle_home %>
 ORACLE_BASE=<%= oracle_base %>
-oracle.install.db.InstallEdition=EE
+oracle.install.db.InstallEdition=SE
 oracle.install.db.isCustomInstall=false
 oracle.install.db.customComponents=oracle.server:11.2.0.1.0,oracle.sysman.ccr:10.2.7.0.0,oracle.xdk:11.2.0.1.0,oracle.rdbms.oci:11.2.0.1.0,oracle.network:11.2.0.1.0,oracle.network.listener:11.2.0.1.0,oracle.rdbms:11.2.0.1.0,oracle.options:11.2.0.1.0,oracle.rdbms.partitioning:11.2.0.1.0,oracle.oraolap:11.2.0.1.0,oracle.rdbms.dm:11.2.0.1.0,oracle.rdbms.dv:11.2.0.1.0,orcle.rdbms.lbac:11.2.0.1.0,oracle.rdbms.rat:11.2.0.1.0
 oracle.install.db.DBA_GROUP=dba
